wrote all needed service and controller methods.
